# Corrective-RAG-CRAG-

./: .gitignore  CRAG.ipynb  CRAG_websearch.ipynb  Evaluator.ipynb  corrective_rag.ipynb  pyproject.toml  simple_rag.ipynb  updated_rag.ipynb
new_env/: pyvenv.cfg
new_env/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
qdrant_storage/: raft_state.json
