[project]
name = "crag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.9",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.8",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.8",
]
